[workspace]
members = ["rust", "maker"]
resolver = "2"

[patch.crates-io]
bdk-ldk = { git = "https://github.com/itchysats/bdk-ldk", rev = "a096f232dec8c5a50f77b54a67da46d7c9b1311a" } # unreleased
lightning = { git = "https://github.com/itchysats/rust-lightning", rev = "10b69c99ea13c6c2c55c74a7497764a6303b9d34" }
lightning-background-processor = { git = "https://github.com/itchysats/rust-lightning", rev = "10b69c99ea13c6c2c55c74a7497764a6303b9d34" }
lightning-block-sync = { git = "https://github.com/itchysats/rust-lightning", rev = "10b69c99ea13c6c2c55c74a7497764a6303b9d34" }
lightning-invoice = { git = "https://github.com/itchysats/rust-lightning", rev = "10b69c99ea13c6c2c55c74a7497764a6303b9d34" }
lightning-net-tokio = { git = "https://github.com/itchysats/rust-lightning", rev = "10b69c99ea13c6c2c55c74a7497764a6303b9d34" }
lightning-persister = { git = "https://github.com/itchysats/rust-lightning", rev = "10b69c99ea13c6c2c55c74a7497764a6303b9d34" }
lightning-rapid-gossip-sync = { git = "https://github.com/itchysats/rust-lightning", rev = "10b69c99ea13c6c2c55c74a7497764a6303b9d34" }
