[package]
name = "maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
atty = "0.2.14"
bdk = "0.24.0"
bitmex-stream = { git = "https://github.com/itchysats/itchysats", rev = "6e4998ceeb3e21c641da209edd5cd592dbab6802" }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
hex = "0.4.3"
http-api-problem = { version = "0.55.0", features = ["rocket"] }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"
serde = "1.0.147"
serde_json = { version = "1", features = ["raw_value"] }
strum = "0.24"
strum_macros = "0.24"
ten_ten_one = { version = "0.1.0", path = "../rust" }
time = { version = "0.3", features = ["serde", "parsing", "std", "formatting", "macros", "serde-well-known"] }
tokio = { version = "1", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }

[dev-dependencies]
rust_decimal_macros = "1"
